Fix run on JDK above 1.8
Upgrade to new version of dependecy
Add surefire plugin options
Add dock to run from IDEA